--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,36 @@
-# DataSource configuration
-spring.application.name=OpenFoodBackend
-spring.datasource.url=jdbc:mysql://localhost:3306/openfood_db?serverTimezone=UTC
+# ===================================================================
+# APPLICATION CONFIGURATION
+# ===================================================================
+spring.application.name=echapopital
+server.port=8081
+# ===================================================================
+# DATABASE CONNECTION (MySQL)
+# ===================================================================
+spring.datasource.url=jdbc:mysql://localhost:3306/echapopital_db?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-server.port=8081
-
-# JPA / Hibernate configuration
-# Permet de créer la base de données au lancement du serveur (si celle ci est vide)
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
-# règle un warning au lancement du serveur
+# ===================================================================
+# JPA / HIBERNATE CONFIGURATION
+# ===================================================================
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.open-in-view=false
-
+# ===================================================================
+# LOGGING & DEBUGGING
+# ===================================================================
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# ===================================================================
+# CONNECTION POOL (HikariCP) CONFIGURATION
+# ===================================================================
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=30000
+# ===================================================================
+# JSON (Jackson) CONFIGURATION
+# ===================================================================
+spring.jackson.default-property-inclusion=non_null
+spring.jackson.serialization.indent-output=true
