--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -53,5 +53,5 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64
           tags: |
-            cedsanc/openfoodbackend:latest
-            cedsanc/openfoodbackend:${{ github.run_number }}-${{ github.sha }}
+            cedsanc/echapopitalbackend:latest
+            cedsanc/echapopitalbackend:${{ github.run_number }}-${{ github.sha }}
